-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.3
-
None
-
Ubuntu 10.04, Windows 7(x64), Mac OS X 10.6.8
Qt 4.7.3(from recent Qt SDK)
-
da0441aa30e1e10c1e0ac9a8cd305c1b6e63c111 (qt/tqtc-qtdeclarative/5.12.0)
QML ListView doesn't show new 1st item when old 1st item is deleted in some conditions.
How to reproduce.
1) ListView has some items. And it shows half of the 2nd item.
2) Remove the 1st item.
The attached QML file helps to reproduce this.
a) Please run it on QMLViewer(listview-before-removing.png), and click "Remove" button.
b) ListView shows "Item 2" as first item(listview-after-removing.png). But there is "Item 1".
c) Scroll ListView to show "Item 1".
| For Gerrit Dashboard: QTBUG-20575 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 2316,1 | ListView doesn't show new 1st item currentItem is removed. | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |