src/qtquick1/graphicsitems/qdeclarativegridview.cpp
@@ -2919,6 +2919,15 @@ void QDeclarative1GridView::itemsRemoved(int modelIndex, int count)
         }
     }
 
+    // update visibleIndex
+    d->visibleIndex = 0;
+    for (it = d->visibleItems.begin(); it != d->visibleItems.end(); ++it) {
+        if ((*it)->index != -1) {
+            d->visibleIndex = (*it)->index;
+            break;
+        }
+    }
+
     // fix current
     if (d->currentIndex >= modelIndex + count) {
         d->currentIndex -= count;
@@ -2934,15 +2943,6 @@ void QDeclarative1GridView::itemsRemoved(int modelIndex, int count)
             d->updateCurrent(qMin(modelIndex, d->itemCount-1));
         else
             emit currentIndexChanged();
-    }
-
-    // update visibleIndex
-    d->visibleIndex = 0;
-    for (it = d->visibleItems.begin(); it != d->visibleItems.end(); ++it) {
-        if ((*it)->index != -1) {
-            d->visibleIndex = (*it)->index;
-            break;
-        }
     }
 
     if (removedVisible && d->visibleItems.isEmpty()) {
